--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,9 +1,14 @@
 .container {
-  padding: 0 2rem;
+  padding: 2rem; 
+  margin: 0 auto;
+  min-height: 100vh;
+  max-width: 800px;
 }
 
 .main {
-  min-height: 100vh;
+  background: #fff;
+  border-radius: 24px;
+  min-height: 50vh;
   padding: 4rem 0;
   flex: 1;
   display: flex;
@@ -16,16 +21,16 @@
   display: flex;
   flex: 1;
   padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
 .footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+  color: #ccc;
+}
+
+.footer a:hover {
+  color: #ddd;
 }
 
 .title a {
