Styling, show full list

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,7 +2,7 @@
   padding: 2rem; 
   margin: 0 auto;
   min-height: 100vh;
-  max-width: 800px;
+  max-width: 640px;
 }
 
 .main {
@@ -19,6 +19,16 @@
 
 .main h1 {
   text-align: center;
+  font-size: 1.5rem;
+}
+
+.main h2 {
+  font-size: 1.2rem;
+}
+
+.main h3 {
+  font-size: 1rem;
+  padding: 0.5rem;
 }
 
 .footer {
@@ -67,9 +77,9 @@
 
 .button {
   background: #fff;
-  border-radius: 12px;
-  padding: 8px 16px;
-  font-size: 16px;
+  border-radius: 0.75rem;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
   cursor: pointer;
   font-weight: bold;
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
@@ -95,16 +105,30 @@
   position: relative;
 }
 
+.instructionEnabled {
+  color: #000;
+}
+
+.instructionDisabled {
+  color: #888;
+}
+
+.instructionEnabled,
+.instructionDisabled{
+  min-height: 96px;
+}
+
 .instructionList li::before {
   content: counter(list-item)". ";
   display: block;
   position: absolute;
-  left: -2rem;
-  top: 0.2rem;
+  left: -1.5rem;
+  top: 0rem;
   font-weight: bold;
   font-size: 1.2rem;
+  color: #888;
 }
 
 .instructionBody {
-  font-size: 16px;
+  font-size: 1rem;
 }
