--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: system-ui, sans-serif;
-  font-size: 16px;
+  font-size: 12px;
   background: rgb(28, 41, 40);
 }
 
@@ -14,4 +14,10 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+@media screen and (min-width: 768px) {
+  html, body {
+    font-size: 16px;
+  }
 }
